--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
-          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+110001111111">+11(000)111-11-11</a>
     </header>
     <main>
       <section>
-        <div>
-          <h1>Effective Solutions for Your Business</h1>
-          <button type="button">Order Service</button>
-        </div>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section>
         <p>Strategy</p>
@@ -134,12 +132,10 @@
     </main>
     <footer>
       <img src="./img-hw-1/logo.jpg" alt="site logo" width="115" height="24" />
-      <ul>
-        <li>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </li>
-      </ul>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
