goit-markup-hw1-01

--- a/index.html
+++ b/index.html
@@ -8,23 +8,18 @@
   </head>
   <body>
     <header>
-      <a href="">
-        <img
-          src="./img-hw-1/logo.jpg"
-          alt="site logo"
-          width="115"
-          height="24"
-        />
-      </a>
       <nav>
+        <a href="./index.html">WebStudio </a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11(000)111-11-11</a>
+      <address>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+110001111111">+11(000)111-11-11</a>
+      </address>
     </header>
     <main>
       <section>
@@ -32,32 +27,41 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <p>Strategy</p>
+        <h2 hidden>Future</h2>
+        <h3>Strategy</h3>
         <ul>
           <li>
-            Our goal is to identify the business problem to walk away with the
-            perfect and creative solution.
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
           </li>
         </ul>
-        <p>Punctuality</p>
+        <h3>Punctuality</h3>
         <ul>
           <li>
-            Bring the key message to the brand's audience for the best price
-            within the shortest possible time.
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
           </li>
         </ul>
-        <p>Diligence</p>
+        <h3>Diligence</h3>
         <ul>
           <li>
-            Research and confirm brands that present the strongest digital
-            growth opportunities and minimize risk.
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
           </li>
         </ul>
-        <p>Technologies</p>
+        <h3>Technologies</h3>
         <ul>
           <li>
-            Design practice focused on digital experiences. We bring forth a
-            deep passion for problem-solving.
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
           </li>
         </ul>
       </section>
@@ -66,7 +70,7 @@
         <ul>
           <li>
             <img
-              src="./img-hw-1/whatdoing1.jpg"
+              src="./images-hw-1/whatdoing1.jpg"
               alt="Computer"
               width="360"
               height="300"
@@ -74,7 +78,7 @@
           </li>
           <li>
             <img
-              src="./img-hw-1/whatdoing2.jpg"
+              src="./images-hw-1/whatdoing2.jpg"
               alt="Phone"
               width="360"
               height="300"
@@ -82,7 +86,7 @@
           </li>
           <li>
             <img
-              src="./img-hw-1/whatdoing3.jpg"
+              src="./images-hw-1/whatdoing3.jpg"
               alt="Phone in hand"
               width="360"
               height="300"
@@ -95,43 +99,49 @@
         <ul>
           <li>
             <img
-              src="./img-hw-1/mark.jpg"
+              src="./images-hw-1/mark.jpg"
               alt="Product Designer"
               width="264"
               height="260"
             />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
           </li>
-        </ul>
-        <ul>
           <li>
             <img
-              src="./img-hw-1/tom.jpg"
+              src="./images-hw-1/tom.jpg"
               alt="Frontend Developer"
               width="264"
               height="260"
             />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./img-hw-1/camila.jpg"
+              src="./images-hw-1/camila.jpg"
               alt="Marketing"
               width="264"
               height="260"
             />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img
-              src="./img-hw-1/daniel.jpg"
+              src="./images-hw-1/daniel.jpg"
               alt="UI Designer"
               width="264"
               height="260"
             />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <img src="./img-hw-1/logo.jpg" alt="site logo" width="115" height="24" />
+      <a href="./index.html">WebStudio </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
