--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11(000)111-11-11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11(000)111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
@@ -28,8 +30,8 @@
       </section>
       <section>
         <h2 hidden>Future</h2>
-        <h3>Strategy</h3>
         <ul>
+          <h3>Strategy</h3>
           <li>
             <p>
               Our goal is to identify the business problem to walk away with the
@@ -37,8 +39,8 @@
             </p>
           </li>
         </ul>
-        <h3>Punctuality</h3>
         <ul>
+          <h3>Punctuality</h3>
           <li>
             <p>
               Bring the key message to the brand's audience for the best price
@@ -46,8 +48,8 @@
             </p>
           </li>
         </ul>
-        <h3>Diligence</h3>
         <ul>
+          <h3>Diligence</h3>
           <li>
             <p>
               Research and confirm brands that present the strongest digital
@@ -55,8 +57,8 @@
             </p>
           </li>
         </ul>
-        <h3>Technologies</h3>
         <ul>
+          <h3>Technologies</h3>
           <li>
             <p>
               Design practice focused on digital experiences. We bring forth a
