goit-markup-hw-01

--- a/index.html
+++ b/index.html
@@ -69,23 +69,16 @@
               src="./images-hw-1/whatdoing1.jpg"
               alt="Computer"
               width="360"
-              height="300"
             />
           </li>
           <li>
-            <img
-              src="./images-hw-1/whatdoing2.jpg"
-              alt="Phone"
-              width="360"
-              height="300"
-            />
+            <img src="./images-hw-1/whatdoing2.jpg" alt="Phone" width="360" />
           </li>
           <li>
             <img
               src="./images-hw-1/whatdoing3.jpg"
               alt="Phone in hand"
               width="360"
-              height="300"
             />
           </li>
         </ul>
@@ -98,7 +91,6 @@
               src="./images-hw-1/mark.jpg"
               alt="Product Designer"
               width="264"
-              height="260"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -108,28 +100,17 @@
               src="./images-hw-1/tom.jpg"
               alt="Frontend Developer"
               width="264"
-              height="260"
             />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="./images-hw-1/camila.jpg"
-              alt="Marketing"
-              width="264"
-              height="260"
-            />
+            <img src="./images-hw-1/camila.jpg" alt="Marketing" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img
-              src="./images-hw-1/daniel.jpg"
-              alt="UI Designer"
-              width="264"
-              height="260"
-            />
+            <img src="./images-hw-1/daniel.jpg" alt="UI Designer" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
